# tradeHalalLLM

./: .dockerignore  .env.example  .env.stocks.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SECURITY.md  alembic.ini  justfile  pyproject.toml
.cursor/rules/: project-strategy.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c42f379c69b_prompt_genomes.py  24fcae369aa0_daily_recommendation_outcome_columns.py  27bff97b5d2c_initial_postgres_schema.py  3c8d1a4b9f02_round_trip_purification_table.py  552a7d6e5862_predicted_slippage_pct_on_trades_crypto_.py  6c4e9bdf2810_entry_type_on_trades.py  6e30a000f579_daily_recommendations_table.py  76aa7ebe3b32_sharia_exceptions_table.py  78944434afb4_regime_snapshots_table.py  8e2c41a6b54f_pgvector_for_rag_and_regime.py  929702cb2112_rag_thesis_regret_tables.py  a2b3c4d5e6f7_add_purification_entries.py  a6b7c8d9e0f1_add_fill_confirmation_columns.py  b3c4d5e6f7a8_add_web_actions.py  b3f1c7d2a9e4_daily_recommendation_path_outcomes.py  b7c8d9e0f1a2_add_reconciliation_log.py  b9da4efd8872_initial_schema.py  c1a2b3d4e5f6_add_crypto_tables.py  c4d5e6f7a8b9_add_pair_pauses.py  c5b6a92d7311_jsonb_for_json_shaped_columns.py  c7a2e9f4d1b3_quant_trials_table.py  c8d9e0f1a2b3_add_llm_cost_columns.py  d3e4f5a6b7c8_add_position_monitor_columns.py  d48f82af284b_tool_transcript_column.py  d4b8f0a2c6e5_daily_recommendation_plan_outcomes.py  d9e0f1a2b3c4_add_halal_screenings.py  e0f1a2b3c4d5_add_stock_sl_tp_exit_columns.py  e4f5a6b7c8d9_add_snapshots_adjustments_thinking.py  e6f7a8b9c0d1_add_research_jobs.py  ebe4fb61618e_replay_snapshots_table.py  efe56a359835_ml_artefacts.py  f18549dec00a_timezone_aware_datetime_columns.py  f1a2b3c4d5e6_add_slippage_columns.py  f5a6b7c8d9e0_add_kill_switch.py
alembic/versions_legacy_sqlite/: a2b3c4d5e6f7_add_purification_entries.py  d5e6f7a8b9c0_add_runtime_config.py  f5a6b7c8d9e0_add_kill_switch.py
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  app.css  main.tsx
dashboard/src/api/: analytics.ts  client.ts  decisions.ts  halabot.ts  halal.ts  insights.ts  metrics.ts  positions.ts  recommendation.ts  risk.ts  sentiment.ts  system.ts  trades.ts  types.ts
dashboard/src/components/: BeliefCard.tsx  EquityCurve.tsx  ErrorBoundary.tsx  ErrorState.tsx  ExitReasonsChart.tsx  FillQuality.tsx  GuardRejections.tsx  Layout.tsx  PageSkeleton.tsx  PairBreakdown.tsx  PnlBarChart.tsx  RecommendationCard.tsx  SentimentGauge.tsx  StatCard.tsx  TradesTable.tsx
dashboard/src/hooks/: useAnalytics.ts  useBeliefs.ts  useDecisions.ts  useHalal.ts  useInsights.ts  useMetrics.ts  usePositions.ts  usePriceStream.ts  useRecommendation.ts  useRisk.ts  useSentiment.ts  useSystem.ts  useTrades.ts
dashboard/src/lib/: charts.ts  market.tsx  utils.ts
dashboard/src/pages/: Analytics.tsx  BeliefBoard.tsx  Dashboard.tsx  Decisions.tsx  Halal.tsx  Insights.tsx  Observability.tsx  Positions.tsx  Recommendation.tsx  RiskAndSystem.tsx  Sentiment.tsx  System.tsx  Trades.tsx
docs/: ARCHITECTURE.md  CARVE_AUDIT.md  DASHBOARD_ROADMAP.md  OPERATOR_CONTEXT.md  QUANT_PREDICTION_ROADMAP.md  QUICKSTART.md  REARCHITECTURE.md  ROADMAP.md  SESSION_HANDOFF.md  STRATEGY_AUTHORING.md  cleanup_roadmap.md  halal_jurisprudence.md  roadmap_status.md  round4_roadmap.md  round5_roadmap.md
docs/runbooks/: README.md  _template.md  backups-and-pitr.md  broker-api-error-rate.md  chain-backoff.md  cycle-stuck.md  db-connection-lost.md  drift-breach.md  halal-screener-stale.md  halt-engaged.md  llm-circuit-breaker.md  snapshot-store-failure.md
infra/: Dockerfile  README.md  docker-compose.yml  prometheus.yml
infra/grafana/: halal-trader.json
infra/launchd/: README.md  com.halabot.crypto.plist  com.halabot.shadow.plist  com.halabot.stocks.plist  com.halabot.watchdog.plist
notebooks/: README.md  explore-replay-store.ipynb  sentiment-vs-returns.ipynb  test-custom-prompt.ipynb
scripts/: format_logs.py
src/halabot/: __init__.py  app.py  cli.py
src/halabot/analysis/: __init__.py  ab_report.py  attribution.py  backtest.py  significance.py
src/halabot/api/: __init__.py  app.py  queries.py
src/halabot/belief/: __init__.py  evidence.py  levels.py  schema.py  serde.py  store.py  updater.py
src/halabot/cognition/: __init__.py  bars.py  base.py  chronos_forecaster.py  interpreters.py  level_engine.py  regime.py  retrieval.py  router.py  structure.py  thesis.py  worker.py
src/halabot/conviction/: __init__.py  calibrator.py  raw.py
src/halabot/execution/: __init__.py  breaker.py  bridge.py  feasibility.py  live_mode.py  orders.py  position_manager.py  reconcile.py  venue.py
src/halabot/learning/: __init__.py  retrain.py  shadow_outcomes.py  telemetry.py
src/halabot/perception/: __init__.py  base.py  dedup.py  poll.py
src/halabot/platform/: __init__.py  bus.py  clock.py  config.py  db.py  event_log.py  events.py  observability.py  (+1 more)
src/halal_trader/: __init__.py  cli.py  config.py  logging.py  market_hours.py
tests/: conftest.py  test_aaoifi_seed.py  test_aaoifi_standard_17.py  test_aaoifi_standard_21.py  test_aaoifi_standard_30.py  test_aaoifi_summary_helpers.py  test_ab_compare.py  test_ab_router.py  test_academy.py  test_accessibility_audit.py  test_active_learning.py  test_admin_config.py  test_admin_console.py  test_admin_halal.py  test_admin_lifecycle.py  test_admin_route_helpers.py  test_admin_trades.py  test_adversarial.py  test_adversarial_helpers.py  test_advisor_registration_readiness.py  test_agent_flatten.py  test_agentic_wiring.py  test_alembic_migrations.py  test_alert_router.py  test_alert_sink.py  test_analytics.py  test_anomaly_state.py  test_anomaly_versioning.py  test_anthropic_caching.py  test_anthropic_tool_call.py  test_anti_frontrun.py  test_api_reference.py  test_arboun.py  test_audit_nft.py  test_audit_sec_finra.py  test_auth.py  test_backtest_comparator.py  test_backtest_confidence.py  test_backtest_llm.py  test_backup.py  (+463 more)
tests/halabot/: conftest.py  test_ab_report.py  test_app.py  test_cli_backtest_cache.py
(+570 files in other folders)
