[project]
name = "halal-trader"
version = "0.2.0"
description = "LLM-powered halal day-trading bot — stocks (Alpaca) and crypto (Binance)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core
    "mcp>=1.0,<2.0",
    "ollama",
    "httpx",
    "pydantic-settings",
    # Data / ORM
    "sqlmodel",
    "aiosqlite",
    "greenlet",
    "alembic",
    # Scheduling
    "apscheduler>=3.10",
    # CLI
    "click",
    "rich",
    # Optional cloud LLM providers
    "openai",
    "anthropic",
    # Crypto trading
    "python-binance",
    "numpy",
    # Logging
    "python-json-logger",
    # Timezone data (required on minimal/WSL systems without system tzdata)
    "tzdata",
    "uvicorn>=0.40.0",
    "fastapi>=0.135.1",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.3",
    "pgvector>=0.4.2",
]

[project.optional-dependencies]
ml = [
    "transformers",
    "torch",
    "scikit-learn",
    "xgboost",
    "chronos-forecasting",
]
sentiment = [
    "praw",
]
dashboard = [
    "fastapi",
    "uvicorn",
]
all = [
    "halal-trader[ml,sentiment,dashboard]",
]
fingpt = [
    "transformers",
    "peft",
    "torch",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    # Test-only: sqlite in-memory engines for unit tests so the suite
    # doesn't require a running Postgres. Production runs on Postgres
    # via DATABASE_URL — the two never coexist in the same process.
    "aiosqlite",
]

[project.scripts]
halal-trader = "halal_trader.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/halal_trader"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/halal_trader/web/app.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
# Coverage gates the safety / lifecycle surface. The pure HTTP wrappers
# under core/llm/ ({ollama,openai,anthropic}.py, base.py, factory.py)
# and the asyncio scheduler are exercised end-to-end by the live bot
# run rather than in pytest, so excluding them keeps the gate honest.
omit = [
    "src/halal_trader/core/llm/anthropic.py",
    "src/halal_trader/core/llm/base.py",
    "src/halal_trader/core/llm/factory.py",
    "src/halal_trader/core/llm/ollama.py",
    "src/halal_trader/core/llm/openai.py",
    "src/halal_trader/core/portfolio.py",
    "src/halal_trader/core/scheduler.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ── mypy ────────────────────────────────────────────────────────
# CI gates only on the contract / lifecycle layer (`domain` Protocols +
# `core` base classes) where correctness drift is most expensive. Other
# packages are intentionally NOT in `files` — run `mypy src/` ad-hoc to
# survey and tighten incrementally.
[tool.mypy]
python_version = "3.14"
files = ["src/halal_trader/domain", "src/halal_trader/core"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
strict = true
