[project]
name = "halal-trader"
version = "0.2.0"
description = "LLM-powered halal day-trading bot — stocks (Alpaca) and crypto (Binance)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core
    "mcp>=1.0,<2.0",
    "ollama",
    "httpx",
    "pydantic-settings",
    # Data / ORM
    "sqlmodel",
    "aiosqlite",
    "greenlet",
    "alembic",
    # Scheduling
    "apscheduler>=3.10",
    # CLI
    "click",
    "rich",
    # Optional cloud LLM providers
    "openai",
    "anthropic",
    # Crypto trading
    "python-binance",
    "numpy",
    # Logging
    "python-json-logger",
    # Timezone data (required on minimal/WSL systems without system tzdata)
    "tzdata",
    "uvicorn>=0.40.0",
    "fastapi>=0.135.1",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.3",
    "pgvector>=0.4.2",
    # Structured concurrency for the supervisor
    "anyio>=4",
    # Prometheus client for native histograms (Wave J)
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
ml = [
    "transformers",
    "torch",
    "scikit-learn",
    "xgboost",
    "chronos-forecasting",
]
sentiment = [
    "praw",
]
dashboard = [
    "fastapi",
    "uvicorn",
]
all = [
    "halal-trader[ml,sentiment,dashboard]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
halal-trader = "halal_trader.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/halal_trader"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/halal_trader/web/app.py" = ["E501"]
# Email renderer has a multi-line HTML template f-string where
# wrapping each inline-styled tag would hurt readability without
# changing the rendered output.
"src/halal_trader/notifications/email.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # AsyncMock auto-creates child AsyncMock attributes the first time they're
    # touched (in `if`-guards, attribute lookups, etc.); the resulting
    # coroutines never get awaited because the access never escalated to a
    # call. These are mock-plumbing artifacts in tests, not production bugs.
    "ignore:coroutine 'AsyncMockMixin\\._execute_mock_call' was never awaited:RuntimeWarning",
    # python-binance 1.0.36 imports ``websockets.WebSocketClientProtocol`` and
    # ``websockets.legacy``, both deprecated by the websockets library. Not
    # our bug to fix; filter so the warning summary stays usable.
    "ignore:websockets\\.WebSocketClientProtocol is deprecated:DeprecationWarning",
    "ignore:websockets\\.legacy is deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
# Coverage gates the safety / lifecycle surface. The pure HTTP wrappers
# under core/llm/ ({ollama,openai,anthropic}.py, base.py, factory.py)
# and the asyncio scheduler are exercised end-to-end by the live bot
# run rather than in pytest, so excluding them keeps the gate honest.
omit = [
    "src/halal_trader/core/llm/anthropic.py",
    "src/halal_trader/core/llm/base.py",
    "src/halal_trader/core/llm/factory.py",
    "src/halal_trader/core/llm/ollama.py",
    "src/halal_trader/core/llm/openai.py",
    "src/halal_trader/core/portfolio.py",
    "src/halal_trader/core/scheduler.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ── mypy ────────────────────────────────────────────────────────
# CI gates on the contract / lifecycle layer (`domain` Protocols +
# `core` base classes) plus the data-access layer (`db/repository.py`)
# where correctness drift is most expensive. Other packages are
# intentionally NOT in `files` — run `mypy src/` ad-hoc to survey
# and tighten incrementally.
[tool.mypy]
python_version = "3.14"
files = [
    "src/halal_trader/domain",
    "src/halal_trader/core",
    "src/halal_trader/db/repository.py",
]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
strict = true

# Pre-existing untracked WIP modules — not yet checked-in, scheduled for
# follow-up batches. Keep them out of the strict gate so unrelated commits
# aren't blocked. Drop entries as they get cleaned up.
[[tool.mypy.overrides]]
module = [
    "halal_trader.core.ab_compare",
    "halal_trader.core.api_reference",
    "halal_trader.core.chaos",
    "halal_trader.core.committee",
    "halal_trader.core.cross_asset_signal",
    "halal_trader.core.cycle_stages",
    "halal_trader.core.scenario_sim",
    "halal_trader.domain.policies",
]
ignore_errors = true
